[sdk] Implement RemoteObject for scopes backed by source maps
This CL adds a new RemoteObject implementation that resolves
binding expressions from the source map "Scopes" proposal and
retrieves their values via Debugger.evaluateOnCallFrame.

R=pfaffe@chromium.org

Bug: 40277685
Change-Id: I8dda59451a191615a2104d43dd315d494377c6d5
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5829405
Reviewed-by: Philip Pfaffe <pfaffe@chromium.org>
Commit-Queue: Simon Zünd <szuend@chromium.org>

--- a/front_end/core/sdk/BUILD.gn
+++ b/front_end/core/sdk/BUILD.gn
@@ -165,6 +165,7 @@ ts_library("unittests") {
     "ServiceWorkerManager.test.ts",
     "SourceMap.test.ts",
     "SourceMapManager.test.ts",
+    "SourceMapScopeChainEntry.test.ts",
     "SourceMapScopes.test.ts",
     "SourceMapScopesInfo.test.ts",
     "StorageBucketsModel.test.ts",
