--- a/front_end/panels/timeline/components/BUILD.gn
+++ b/front_end/panels/timeline/components/BUILD.gn
@@ -45,7 +45,9 @@ devtools_module("components") {
   ]
 
   deps = [
+    "../../../core/common:bundle",
     "../../../core/i18n:bundle",
+    "../../../core/platform:bundle",
     "../../../generated",
     "../../../models/crux-manager:bundle",
     "../../../models/live-metrics:bundle",
