[RPP] Add tutorials in Annotations tab inside bar when it is empty
The text/picture is not the final version. But we can have something to see how it looks. Will update before launch.

screenshots: https://screenshot.googleplex.com/3r7LT4geDRzrJ6d

Bug: 362676898
Change-Id: I6ed8860a2a1f63ea59360d48525006f65039ee0e
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5829217
Commit-Queue: Nancy Li <nancyly@chromium.org>
Reviewed-by: Alina Varkki <alinavarkki@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -194,6 +194,9 @@ grd_files_release_sources = [
   "front_end/Images/open-externally.svg",
   "front_end/Images/pause.svg",
   "front_end/Images/pen-spark.svg",
+  "front_end/Images/performance-panel-diagram.svg",
+  "front_end/Images/performance-panel-entry-label.svg",
+  "front_end/Images/performance-panel-time-range.svg",
   "front_end/Images/performance.svg",
   "front_end/Images/person.svg",
   "front_end/Images/play.svg",
