--- a/config/gni/devtools_image_files.gni
+++ b/config/gni/devtools_image_files.gni
@@ -194,6 +194,9 @@ devtools_svg_sources = [
   "open-externally.svg",
   "pause.svg",
   "pen-spark.svg",
+  "performance-panel-diagram.svg",
+  "performance-panel-entry-label.svg",
+  "performance-panel-time-range.svg",
   "performance.svg",
   "person.svg",
   "play.svg",
