[RPP] Add ThirdPartyWeb insight, classify source of each network request
Bug: 352244718
Change-Id: Ic1c73a60fa0a0eea74663f2952744f07bcf24d4f
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5825621
Commit-Queue: Connor Clark <cjamcl@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1055,6 +1055,7 @@ grd_files_debug_sources = [
   "front_end/models/trace/insights/InteractionToNextPaint.js",
   "front_end/models/trace/insights/LargestContentfulPaint.js",
   "front_end/models/trace/insights/RenderBlocking.js",
+  "front_end/models/trace/insights/ThirdPartyWeb.js",
   "front_end/models/trace/insights/Viewport.js",
   "front_end/models/trace/insights/types.js",
   "front_end/models/trace/lantern/core/LanternError.js",
