--- a/front_end/models/trace/insights/BUILD.gn
+++ b/front_end/models/trace/insights/BUILD.gn
@@ -15,11 +15,14 @@ devtools_module("insights") {
     "InteractionToNextPaint.ts",
     "LargestContentfulPaint.ts",
     "RenderBlocking.ts",
+    "ThirdPartyWeb.ts",
     "Viewport.ts",
     "types.ts",
   ]
 
   deps = [
+    "../../../third_party/third-party-web:bundle",
+    "../extras:bundle",
     "../handlers:bundle",
     "../lantern:bundle",
   ]
@@ -45,6 +48,7 @@ ts_library("unittests") {
     "InteractionToNextPaint.test.ts",
     "LargestContentfulPaint.test.ts",
     "RenderBlocking.test.ts",
+    "ThirdPartyWeb.test.ts",
     "Viewport.test.ts",
   ]
 
