--- a/front_end/panels/timeline/overlays/components/BUILD.gn
+++ b/front_end/panels/timeline/overlays/components/BUILD.gn
@@ -28,6 +28,7 @@ devtools_module("components") {
     "../../../../core/i18n:bundle",
     "../../../../models/trace:bundle",
     "../../../../ui/components/helpers:bundle",
+    "../../../../ui/components/icon_button:bundle",
     "../../../../ui/lit-html:bundle",
   ]
 }
