Add scroll adorner in Elements panel
- DOMModel: Added isScrollable property and scrollableFlagUpdated event and logic to update the isScrollable flag on nodes.
- AdornerManager: Added a new SCROLL adorner to represent scrollable nodes.
- ElementsTreeElement: Added logic to display a scroll adorner for scrollable nodes and update the adorner when the isScrollable flag changes.

Bug: 40670442
Change-Id: If4a715069a22bdddb3b11065b8af52e8ca34376c
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5799944
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Philip Pfaffe <pfaffe@chromium.org>
Commit-Queue: Ionuț Marius Voicilă <ionutvoicila@google.com>

--- a/test/e2e/resources/elements/BUILD.gn
+++ b/test/e2e/resources/elements/BUILD.gn
@@ -11,6 +11,7 @@ copy_to_gen("elements") {
     "adornment-container-query.html",
     "adornment-media.html",
     "adornment-scroll-snap.html",
+    "adornment-scroll.html",
     "adornment-shadow.html",
     "adornment.html",
     "at-property.html",
