RPP: move EventUICategory into components/EntryStyles
This is needed so that we can use the styles in the code that calculates
the user visible title for a given event, as lots of events have custom
names as defined in the styles map.

This CL doesn't change any implementation, it's just the mechanical
move to set me up for future CLs.

Bug: 365047728
Change-Id: I9cbaface34883c104b262ec6735b6f1c8a0eede0
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5838375
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Nancy Li <nancyly@chromium.org>
Commit-Queue: Nancy Li <nancyly@chromium.org>

--- a/front_end/panels/timeline/components/BUILD.gn
+++ b/front_end/panels/timeline/components/BUILD.gn
@@ -30,6 +30,7 @@ devtools_module("components") {
     "CPUThrottlingSelector.ts",
     "DetailsView.ts",
     "EntryName.ts",
+    "EntryStyles.ts",
     "FieldSettingsDialog.ts",
     "InteractionBreakdown.ts",
     "LiveMetricsView.ts",
@@ -85,6 +86,9 @@ devtools_entrypoint("bundle") {
   visibility = [
     ":*",
     "..:*",
+
+    # only for use in tests
+    "../../../models/trace/handlers/*",
     "../../../ui/components/docs/*",
   ]
 }
