--- a/front_end/models/trace/handlers/BUILD.gn
+++ b/front_end/models/trace/handlers/BUILD.gn
@@ -100,6 +100,7 @@ ts_library("unittests") {
     "../../../generated",
     "../../../models/trace:bundle",
     "../../../panels/timeline:bundle",
+    "../../../panels/timeline/components:bundle",
     "../../../testing",
   ]
 }
