[Freestyler] Update CSS assistant to be called as "AI Assistant"
Fixed: 365062752
Change-Id: Ic7f27b83dc790810b2d172b6d8eeb9f4520f6c7d
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5836895
Auto-Submit: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Nikolay Vitkov <nvitkov@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>

--- a/config/gni/devtools_image_files.gni
+++ b/config/gni/devtools_image_files.gni
@@ -229,6 +229,7 @@ devtools_svg_sources = [
   "send.svg",
   "shadow.svg",
   "small-status-dot.svg",
+  "smart-assistant.svg",
   "snippet.svg",
   "spark-info.svg",
   "spark.svg",
