--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -230,6 +230,7 @@ grd_files_release_sources = [
   "front_end/Images/send.svg",
   "front_end/Images/shadow.svg",
   "front_end/Images/small-status-dot.svg",
+  "front_end/Images/smart-assistant.svg",
   "front_end/Images/snippet.svg",
   "front_end/Images/spark-info.svg",
   "front_end/Images/spark.svg",
