show selector stats in performance sidebar insight tab
https://i.imgur.com/KXbktRC.png

Bug: 357047902
Change-Id: I33a2c46854247a0c2cd7689896700ebd3f76d49f
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5757947
Commit-Queue: Guangyue Xu <guangyue.xu@microsoft.com>
Reviewed-by: Paul Irish <paulirish@chromium.org>

--- a/front_end/models/trace/insights/BUILD.gn
+++ b/front_end/models/trace/insights/BUILD.gn
@@ -15,6 +15,7 @@ devtools_module("insights") {
     "InteractionToNextPaint.ts",
     "LargestContentfulPaint.ts",
     "RenderBlocking.ts",
+    "SlowCSSSelector.ts",
     "ThirdPartyWeb.ts",
     "Viewport.ts",
     "types.ts",
@@ -48,6 +49,7 @@ ts_library("unittests") {
     "InteractionToNextPaint.test.ts",
     "LargestContentfulPaint.test.ts",
     "RenderBlocking.test.ts",
+    "SlowCSSSelector.test.ts",
     "ThirdPartyWeb.test.ts",
     "Viewport.test.ts",
   ]
