--- a/front_end/panels/timeline/components/insights/BUILD.gn
+++ b/front_end/panels/timeline/components/insights/BUILD.gn
@@ -24,6 +24,7 @@ devtools_module("insights") {
     "NodeLink.ts",
     "RenderBlocking.ts",
     "SidebarInsight.ts",
+    "SlowCSSSelector.ts",
     "ThirdParties.ts",
     "Viewport.ts",
     "types.ts",
