--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1057,6 +1057,7 @@ grd_files_debug_sources = [
   "front_end/models/trace/insights/InteractionToNextPaint.js",
   "front_end/models/trace/insights/LargestContentfulPaint.js",
   "front_end/models/trace/insights/RenderBlocking.js",
+  "front_end/models/trace/insights/SlowCSSSelector.js",
   "front_end/models/trace/insights/ThirdPartyWeb.js",
   "front_end/models/trace/insights/Viewport.js",
   "front_end/models/trace/insights/types.js",
@@ -1790,6 +1791,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/insights/NodeLink.js",
   "front_end/panels/timeline/components/insights/RenderBlocking.js",
   "front_end/panels/timeline/components/insights/SidebarInsight.js",
+  "front_end/panels/timeline/components/insights/SlowCSSSelector.js",
   "front_end/panels/timeline/components/insights/ThirdParties.js",
   "front_end/panels/timeline/components/insights/Viewport.js",
   "front_end/panels/timeline/components/insights/lcpDiscovery.css.js",
