[RPP Observations] Improve environment settings section
https://screenshot.googleplex.com/5x2r6NXos9A7UtP

Dynamic info from field data is now hidden behind icons with tooltips.
This has a couple benefits:
- The advice notes are less aggressive, which is good since they are
  not strong requirements.
- The section has less text which is less overwhelming
- The dynamic information is less likely to cause layout shifts

Bug: 362252927, 360379617
Change-Id: I8d1453e7bac4ebac393c3803d4b45fc2cdba7bea
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5835892
Commit-Queue: Adam Raine <asraine@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>

--- a/config/gni/devtools_image_files.gni
+++ b/config/gni/devtools_image_files.gni
@@ -146,6 +146,7 @@ devtools_svg_sources = [
   "gears.svg",
   "google.svg",
   "goto-filled.svg",
+  "group.svg",
   "heap-snapshot.svg",
   "heap-snapshots.svg",
   "help.svg",
