--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -143,6 +143,7 @@ grd_files_release_sources = [
   "front_end/Images/gears.svg",
   "front_end/Images/google.svg",
   "front_end/Images/goto-filled.svg",
+  "front_end/Images/group.svg",
   "front_end/Images/heap-snapshot.svg",
   "front_end/Images/heap-snapshots.svg",
   "front_end/Images/help.svg",
@@ -1778,6 +1779,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/SidebarSingleNavigation.js",
   "front_end/panels/timeline/components/Utils.js",
   "front_end/panels/timeline/components/breadcrumbsUI.css.js",
+  "front_end/panels/timeline/components/cpuThrottlingSelector.css.js",
   "front_end/panels/timeline/components/fieldSettingsDialog.css.js",
   "front_end/panels/timeline/components/insights/CLSCulprits.js",
   "front_end/panels/timeline/components/insights/DocumentLatency.js",
@@ -1798,6 +1800,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/metricValueStyles.css.js",
   "front_end/panels/timeline/components/networkRequestDetails.css.js",
   "front_end/panels/timeline/components/networkRequestTooltip.css.js",
+  "front_end/panels/timeline/components/networkThrottlingSelector.css.js",
   "front_end/panels/timeline/components/sidebarAnnotationsTab.css.js",
   "front_end/panels/timeline/components/sidebarInsightsTab.css.js",
   "front_end/panels/timeline/components/sidebarSingleNavigation.css.js",
