[Freestyler] Add CodeBlock to accept a heading and add heading in Freestyler
In addition to that:
* Updated the border radiuses in CodeBlock to match better with the design, there can still be some adjustments about them later.
* Added max-height option to the `code` parts so that the
`data returned` part has a max height and is scrollable.
* Separated disclaimer from the code itself.

I'll create a separate bug for "Open in new tab" bug as it is not
one of our requirements right now.

For testing this out visually, after building you should:
* Try running Freestyler and see that the headings are shown correctly & disclaimer is separated.
* Run components-server and checkout `CodeBlock` example inside `MarkdownView` examples for all states of it.

Fixed: 365068111, 357563071
Change-Id: I9ca1df7e07cd8c393ad9225993840ba8d07c0110
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5845034
Reviewed-by: Nikolay Vitkov <nvitkov@chromium.org>
Auto-Submit: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/ui/components/docs/markdown_view/BUILD.gn
+++ b/front_end/ui/components/docs/markdown_view/BUILD.gn
@@ -7,7 +7,10 @@ import("../../../../../scripts/build/typescript/typescript.gni")
 
 ts_library("ts") {
   testonly = true
-  sources = [ "basic.ts" ]
+  sources = [
+    "basic.ts",
+    "code-block.ts",
+  ]
 
   deps = [
     "../../../../testing",
@@ -19,7 +22,10 @@ ts_library("ts") {
 
 copy_to_gen("markdown_view") {
   testonly = true
-  sources = [ "basic.html" ]
+  sources = [
+    "basic.html",
+    "code-block.html",
+  ]
 
   deps = [ ":ts" ]
 }
