[Freestyler] Update UI for SideEffect
Changes the icon to match the design, add support for canaled runs.

Bug: 365535423
Change-Id: Ibcb874f183d9679e01e54f64a2a331d84751d190
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5845418
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>
Auto-Submit: Nikolay Vitkov <nvitkov@chromium.org>

--- a/config/gni/devtools_image_files.gni
+++ b/config/gni/devtools_image_files.gni
@@ -193,6 +193,7 @@ devtools_svg_sources = [
   "mouse.svg",
   "network-settings.svg",
   "open-externally.svg",
+  "pause-circle.svg",
   "pause.svg",
   "pen-spark.svg",
   "performance-panel-diagram.svg",
