--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -193,6 +193,7 @@ grd_files_release_sources = [
   "front_end/Images/network-settings.svg",
   "front_end/Images/nodeIcon.avif",
   "front_end/Images/open-externally.svg",
+  "front_end/Images/pause-circle.svg",
   "front_end/Images/pause.svg",
   "front_end/Images/pen-spark.svg",
   "front_end/Images/performance-panel-diagram.svg",
