[RPP] Add Table component
Now using <table> and a common component for insight tables.

Not much visual change, except for minor spacing changes, and now all
tables have the 2nd+ column values bolded (to match the design).

Bug: 352244718 357047902
Change-Id: I507c696cc445b60c424ab4ebf6dcac15b26572ba
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5851997
Commit-Queue: Connor Clark <cjamcl@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>

--- a/front_end/panels/timeline/components/insights/BUILD.gn
+++ b/front_end/panels/timeline/components/insights/BUILD.gn
@@ -11,6 +11,7 @@ generate_css("css_files") {
   sources = [
     "lcpDiscovery.css",
     "sidebarInsight.css",
+    "table.css",
   ]
 }
 
@@ -25,6 +26,7 @@ devtools_module("insights") {
     "RenderBlocking.ts",
     "SidebarInsight.ts",
     "SlowCSSSelector.ts",
+    "Table.ts",
     "ThirdParties.ts",
     "Viewport.ts",
     "types.ts",
