--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1793,10 +1793,12 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/insights/RenderBlocking.js",
   "front_end/panels/timeline/components/insights/SidebarInsight.js",
   "front_end/panels/timeline/components/insights/SlowCSSSelector.js",
+  "front_end/panels/timeline/components/insights/Table.js",
   "front_end/panels/timeline/components/insights/ThirdParties.js",
   "front_end/panels/timeline/components/insights/Viewport.js",
   "front_end/panels/timeline/components/insights/lcpDiscovery.css.js",
   "front_end/panels/timeline/components/insights/sidebarInsight.css.js",
+  "front_end/panels/timeline/components/insights/table.css.js",
   "front_end/panels/timeline/components/insights/types.js",
   "front_end/panels/timeline/components/interactionBreakdown.css.js",
   "front_end/panels/timeline/components/liveMetricsView.css.js",
