[RPP] Layout shift details
- under an experiment flag
- creates a new component for layout shift details along with a test
server component
- uses the fresh recording tracker to help determine if we
could linkify dom elements/culprits etc. As a fallback for now, we skip
rendering these. We could change these fallbacks down the line
- adds capturing domLoadingEvent data (required to get the appropriate
iframe ID reference for linkifying)

https://screenshot.googleplex.com/8WqNEESTrDXrMCg
https://screenshot.googleplex.com/85UQuoUmyPMiTr2

There are still some UI nits that need cleaning, these will be done
in follow ups.


Bug:329735547
Change-Id: I99b2e2c5f95f50dcf5311c4c065cb421a9c502ad
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5814920
Reviewed-by: Adam Raine <asraine@chromium.org>
Commit-Queue: Adriana Ixba <aixba@chromium.org>

--- a/front_end/panels/timeline/components/BUILD.gn
+++ b/front_end/panels/timeline/components/BUILD.gn
@@ -13,6 +13,7 @@ generate_css("css_files") {
     "cpuThrottlingSelector.css",
     "fieldSettingsDialog.css",
     "interactionBreakdown.css",
+    "layoutShiftDetails.css",
     "liveMetricsView.css",
     "metricCard.css",
     "metricValueStyles.css",
@@ -35,6 +36,7 @@ devtools_module("components") {
     "EntryStyles.ts",
     "FieldSettingsDialog.ts",
     "InteractionBreakdown.ts",
+    "LayoutShiftDetails.ts",
     "LiveMetricsView.ts",
     "MetricCard.ts",
     "MetricCompareStrings.ts",
@@ -105,6 +107,7 @@ ts_library("unittests") {
     "FieldSettingsDialog.test.ts",
     "InteractionBreakdown.test.ts",
     "Invalidations.test.ts",
+    "LayoutShiftDetails.test.ts",
     "LiveMetricsView.test.ts",
     "MetricCard.test.ts",
     "NetworkRequestDetails.test.ts",
