--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1770,6 +1770,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/EntryStyles.js",
   "front_end/panels/timeline/components/FieldSettingsDialog.js",
   "front_end/panels/timeline/components/InteractionBreakdown.js",
+  "front_end/panels/timeline/components/LayoutShiftDetails.js",
   "front_end/panels/timeline/components/LiveMetricsView.js",
   "front_end/panels/timeline/components/MetricCard.js",
   "front_end/panels/timeline/components/MetricCompareStrings.js",
@@ -1801,6 +1802,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/insights/table.css.js",
   "front_end/panels/timeline/components/insights/types.js",
   "front_end/panels/timeline/components/interactionBreakdown.css.js",
+  "front_end/panels/timeline/components/layoutShiftDetails.css.js",
   "front_end/panels/timeline/components/liveMetricsView.css.js",
   "front_end/panels/timeline/components/metricCard.css.js",
   "front_end/panels/timeline/components/metricValueStyles.css.js",
