[Freestyler] Add indeterminate spinner loading indicator
Bug: 361286171
Change-Id: Iae1e92ab59744eca85ec020102433c4e4fc60e94
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5836651
Commit-Queue: Samiya Caur <samiyac@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Nikolay Vitkov <nvitkov@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -690,6 +690,7 @@ grd_files_release_sources = [
   "front_end/ui/components/report_view/report_view.js",
   "front_end/ui/components/request_link_icon/request_link_icon.js",
   "front_end/ui/components/settings/settings.js",
+  "front_end/ui/components/spinners/spinners.js",
   "front_end/ui/components/split_view/split_view.js",
   "front_end/ui/components/srgb_overlay/srgb_overlay.js",
   "front_end/ui/components/suggestion_input/suggestion_input.js",
@@ -2183,6 +2184,8 @@ grd_files_debug_sources = [
   "front_end/ui/components/settings/SettingDeprecationWarning.js",
   "front_end/ui/components/settings/settingCheckbox.css.js",
   "front_end/ui/components/settings/settingDeprecationWarning.css.js",
+  "front_end/ui/components/spinners/Spinner.js",
+  "front_end/ui/components/spinners/spinner.css.js",
   "front_end/ui/components/split_view/SplitView.js",
   "front_end/ui/components/srgb_overlay/SrgbOverlay.js",
   "front_end/ui/components/srgb_overlay/srgbOverlay.css.js",
