[Console Insights] Add spinner as a loading indicator while insights are being generated
Bug: 359473711
Change-Id: Id9a9b3c17b5791e01028467b62782d9ef13c6af0
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5836637
Reviewed-by: Nikolay Vitkov <nvitkov@chromium.org>
Commit-Queue: Samiya Caur <samiyac@chromium.org>

--- a/front_end/panels/explain/BUILD.gn
+++ b/front_end/panels/explain/BUILD.gn
@@ -31,6 +31,7 @@ devtools_module("explain") {
     "../../models/logs:bundle",
     "../../third_party/marked:bundle",
     "../../ui/components/markdown_view:bundle",
+    "../../ui/components/spinners:bundle",
     "../../ui/legacy:bundle",
     "../../ui/legacy/components/source_frame:bundle",
     "../console:bundle",
