--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1789,6 +1789,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/insights/CLSCulprits.js",
   "front_end/panels/timeline/components/insights/DocumentLatency.js",
   "front_end/panels/timeline/components/insights/Helpers.js",
+  "front_end/panels/timeline/components/insights/InteractionToNextPaint.js",
   "front_end/panels/timeline/components/insights/LCPDiscovery.js",
   "front_end/panels/timeline/components/insights/LCPPhases.js",
   "front_end/panels/timeline/components/insights/NodeLink.js",
