--- a/front_end/panels/timeline/components/insights/BUILD.gn
+++ b/front_end/panels/timeline/components/insights/BUILD.gn
@@ -20,6 +20,7 @@ devtools_module("insights") {
     "CLSCulprits.ts",
     "DocumentLatency.ts",
     "Helpers.ts",
+    "InteractionToNextPaint.ts",
     "LCPDiscovery.ts",
     "LCPPhases.ts",
     "NodeLink.ts",
