Fix unit tests to run in full chromium checkout
Some unit tests were failing in a full chromium checkout due to an
inability to find served karma files. Changes include:
 - Karma server base path is now the root of the full checkout
 - Paths are loaded relative to the module import path
 - Improper bundling of TraceLoader in MetricTestUtils (which breaks
   the module import path) has been removed

Bug: None
Change-Id: I49ce4b744d4ceb5fbea537eb205a1331d127aaac
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5856620
Commit-Queue: Danil Somsikov <dsv@chromium.org>
Auto-Submit: Eric Leese <leese@google.com>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Danil Somsikov <dsv@chromium.org>

--- a/front_end/BUILD.gn
+++ b/front_end/BUILD.gn
@@ -137,6 +137,7 @@ group("unittests") {
     "models/trace/insights:unittests",
     "models/trace/lantern/core:unittests",
     "models/trace/lantern/graph:unittests",
+    "models/trace/lantern/metrics:unittests",
     "models/trace/lantern/simulation:unittests",
     "models/trace/root-causes:unittests",
     "models/trace/types:unittests",
