[DrJones] Update to Freestyler panel for DrJones Network Agent
Bug: 362422969
Change-Id: I60e4948d80af8a7171aa5dc10403a08d1877e09b
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5849956
Commit-Queue: Samiya Caur <samiyac@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/freestyler/BUILD.gn
+++ b/front_end/panels/freestyler/BUILD.gn
@@ -19,6 +19,7 @@ generate_css("css_files") {
 devtools_module("freestyler") {
   sources = [
     "ChangeManager.ts",
+    "DrJonesNetworkAgent.ts",
     "ExtensionScope.ts",
     "FreestylerAgent.ts",
     "FreestylerEvaluateAction.ts",
