--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1372,6 +1372,7 @@ grd_files_debug_sources = [
   "front_end/panels/explain/components/consoleInsight.css.js",
   "front_end/panels/explain/components/consoleInsightSourcesList.css.js",
   "front_end/panels/freestyler/ChangeManager.js",
+  "front_end/panels/freestyler/DrJonesNetworkAgent.js",
   "front_end/panels/freestyler/ExtensionScope.js",
   "front_end/panels/freestyler/FreestylerAgent.js",
   "front_end/panels/freestyler/FreestylerEvaluateAction.js",
