Update learn more and info icons to buttons in Settings
Bug:none
Change-Id: I59afc8fa7e83f30f4c06aad61e2a9294ac225444
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5854044
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/ui/components/settings/BUILD.gn
+++ b/front_end/ui/components/settings/BUILD.gn
@@ -25,8 +25,8 @@ devtools_module("settings") {
     "../../../core/common:bundle",
     "../../lit-html:bundle",
     "../../visual_logging:bundle",
+    "../buttons:bundle",
     "../helpers:bundle",
-    "../icon_button:bundle",
     "../input:bundle",
   ]
 }
