[Freestyler] Make the Icons filled
Bug: 364564010
Change-Id: Icd8165cd30dd162d06001db85fed0b64092f4eaf
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5864409
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -244,7 +244,9 @@ grd_files_release_sources = [
   "front_end/Images/symbol.svg",
   "front_end/Images/sync.svg",
   "front_end/Images/table.svg",
+  "front_end/Images/thumb-down-filled.svg",
   "front_end/Images/thumb-down.svg",
+  "front_end/Images/thumb-up-filled.svg",
   "front_end/Images/thumb-up.svg",
   "front_end/Images/toolbarResizerVertical.png",
   "front_end/Images/top-panel-close.svg",
