--- a/config/gni/devtools_image_files.gni
+++ b/config/gni/devtools_image_files.gni
@@ -243,7 +243,9 @@ devtools_svg_sources = [
   "symbol.svg",
   "sync.svg",
   "table.svg",
+  "thumb-down-filled.svg",
   "thumb-down.svg",
+  "thumb-up-filled.svg",
   "thumb-up.svg",
   "top-panel-close.svg",
   "top-panel-open.svg",
