[RPP] Refactor insights to work w/o a navigation
Minimal user-facing changes (so far).

This is a significant refactor to how insights are created in the Trace
Engine's Processor. Rather than only considering the bounds of each
navigation, now in addition the beginning of the trace up to the first
navigation is analyzed by the Processor for insights.

* NavigationInsightContext is now BoundedInsightContext, which is a
  discriminated union of a context with a navigation, and one without.
  Each insight checks the context to know how to proceed. Further
  refactors are needed for each insight, so currently most of them
  just return nothing if the context has no navigation.
* Because there is some amount of time between the start of the trace
  and the first navigation (even for a "Reload and Record" action), if
  there is a navigation within the first 1000ms then the start of the
  trace will be processed as part of the first navigation insight set.
  I typically saw 5ms when using "Reload and Record". This is expected
  to receive further refinement once we get some experience with this
  change. See go/cpq:insights-without-navs for reasoning.
* Adds InsightHelpers.ts, and added some useful utility functions: like
  getNext/getNextOrError, because the previous code resulted in `any`
  and that made this refactor more difficult.
* No user-facing changes, except that now the ThirdPartyWeb insight
  correctly segments the data it reports using the new context.window.
  The insights panel still does not show insights for parts of the trace
  without a navigation.

Bug: 366049346
Change-Id: Ibb708a2dd985d1a3a2f27435770379a59d1d0b2b
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5856051
Commit-Queue: Connor Clark <cjamcl@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>

--- a/front_end/testing/BUILD.gn
+++ b/front_end/testing/BUILD.gn
@@ -17,6 +17,7 @@ ts_library("testing") {
     "ExpectStubCall.ts",
     "ExtensionHelpers.ts",
     "FileManagerHelpers.ts",
+    "InsightHelpers.ts",
     "LanguagePluginHelpers.ts",
     "MockConnection.ts",
     "MockExecutionContext.ts",
