--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1129,6 +1129,7 @@ grd_files_debug_sources = [
   "front_end/panels/application/CookieItemsView.js",
   "front_end/panels/application/DOMStorageItemsView.js",
   "front_end/panels/application/DOMStorageModel.js",
+  "front_end/panels/application/ExtensionStorageModel.js",
   "front_end/panels/application/IndexedDBModel.js",
   "front_end/panels/application/IndexedDBViews.js",
   "front_end/panels/application/InterestGroupStorageModel.js",
