[RPP Observations] Add layout shifts to the live metrics model
This does not make an UI changes yet.

Bug: 369100729
Change-Id: Ic11d64e861a823d309d21bd6b6f0aa70aa22cfc8
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5889707
Commit-Queue: Adam Raine <asraine@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>

--- a/front_end/models/live-metrics/web-vitals-injected/BUILD.gn
+++ b/front_end/models/live-metrics/web-vitals-injected/BUILD.gn
@@ -8,6 +8,7 @@ import("../../../../scripts/build/ninja/node.gni")
 devtools_module("web-vitals-injected") {
   sources = [
     "OnEachInteraction.ts",
+    "OnEachLayoutShift.ts",
     "web-vitals-injected.ts",
   ]
 
