[RPP] Support non-navigations for CLS insight
Bug: 366049346
Change-Id: I24ec094a874e4e2e0c5c0bae951abd3e59236275
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5898204
Auto-Submit: Connor Clark <cjamcl@chromium.org>
Reviewed-by: Adam Raine <asraine@chromium.org>
Commit-Queue: Connor Clark <cjamcl@chromium.org>

--- a/front_end/panels/timeline/fixtures/traces/BUILD.gn
+++ b/front_end/panels/timeline/fixtures/traces/BUILD.gn
@@ -17,6 +17,7 @@ copy_to_gen("traces") {
     "cls-cluster-navigation.json.gz",
     "cls-last-cluster-max-duration.json.gz",
     "cls-multiple-frames.json.gz",
+    "cls-no-nav.json.gz",
     "cls-single-frame.json.gz",
     "enhanced-traces.json.gz",
     "extension-tracks-and-marks.json.gz",
