[RPP] Add overlays to DocumentLatency to highlight specific issues
https://i.imgur.com/ziRgPNP.png

Bug: 368529808
Change-Id: Ia8949f417d2bda88f1e085c64d4d12974ddecb4b
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5906039
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/timeline/fixtures/traces/BUILD.gn
+++ b/front_end/panels/timeline/fixtures/traces/BUILD.gn
@@ -46,6 +46,7 @@ copy_to_gen("traces") {
     "lcp-web-font.json.gz",
     "load-simple.json.gz",
     "mainWasm_profile.json.gz",
+    "many-redirects.json.gz",
     "many-requests.json.gz",
     "missing-process-data.json.gz",
     "missing-tracing-start.json.gz",
