Fix issues identified by the lit-analyzer.
Silenced some of the harder errors as we want to run lit-analyzer in
presubmit.

Bug: 370734442
Change-Id: Iaa53665069bc3f0fa557b39b045462e094c31bf7
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5904624
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>
Auto-Submit: Danil Somsikov <dsv@chromium.org>

--- a/front_end/ui/components/panel_feedback/BUILD.gn
+++ b/front_end/ui/components/panel_feedback/BUILD.gn
@@ -27,6 +27,7 @@ devtools_module("panel_feedback") {
     "../../../core/root:bundle",
     "../../../ui/components/helpers:bundle",
     "../../../ui/components/render_coordinator:bundle",
+    "../../../ui/legacy:bundle",
     "../../../ui/lit-html:bundle",
     "../buttons:bundle",
     "../input:bundle",
