RPP: fix precision formatting of timespan breakdown overlay durations
Bug: 366277895
Change-Id: I12d321682f3d0ab47eee7ec9b51a55f837d2ee73
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5904626
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Connor Clark <cjamcl@chromium.org>
Commit-Queue: Connor Clark <cjamcl@chromium.org>

--- a/front_end/panels/timeline/overlays/components/BUILD.gn
+++ b/front_end/panels/timeline/overlays/components/BUILD.gn
@@ -47,3 +47,15 @@ devtools_entrypoint("bundle") {
     "../../../ui/components/docs/*",
   ]
 }
+
+ts_library("unittests") {
+  testonly = true
+
+  sources = [ "TimespanBreakdownOverlay.test.ts" ]
+
+  deps = [
+    ":bundle",
+    "../../../../testing",
+    "../../../../ui/components/render_coordinator:bundle",
+  ]
+}
