--- a/front_end/BUILD.gn
+++ b/front_end/BUILD.gn
@@ -196,6 +196,7 @@ group("unittests") {
     "panels/timeline/components/insights:unittests",
     "panels/timeline/fixtures/traces",
     "panels/timeline/overlays:unittests",
+    "panels/timeline/overlays/components:unittests",
     "panels/timeline/track_appenders:unittests",
     "panels/timeline/utils:unittests",
     "panels/utils:unittests",
