--- a/front_end/panels/timeline/components/BUILD.gn
+++ b/front_end/panels/timeline/components/BUILD.gn
@@ -52,6 +52,7 @@ devtools_module("components") {
 
   deps = [
     "../../../core/common:bundle",
+    "../../../core/host:bundle",
     "../../../core/i18n:bundle",
     "../../../core/platform:bundle",
     "../../../generated",
@@ -59,6 +60,7 @@ devtools_module("components") {
     "../../../models/live-metrics:bundle",
     "../../../models/trace:bundle",
     "../../../services/trace_bounds:bundle",
+    "../../../ui/components/buttons:bundle",
     "../../../ui/components/data_grid:bundle",
     "../../../ui/components/dialogs:bundle",
     "../../../ui/components/helpers:bundle",
