[RPP] Shorten URLs used for insight set accordion labels
Elides the URLs used as insight set labels in an opinionated way for
this narrow UI surface. The entire URL may be seen by hovering over the
element (via the `title` HTML attribute).

https://i.imgur.com/LDer3O2.png

Bug: 368170718
Change-Id: I4664f86fbec1b7886bc088264cfca4b0d0b8edb0
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5902096
Reviewed-by: Paul Irish <paulirish@chromium.org>
Commit-Queue: Connor Clark <cjamcl@chromium.org>

--- a/front_end/panels/timeline/components/BUILD.gn
+++ b/front_end/panels/timeline/components/BUILD.gn
@@ -117,6 +117,7 @@ ts_library("unittests") {
     "SidebarAnnotationsTab.test.ts",
     "SidebarInsightsTab.test.ts",
     "SidebarSingleInsightSet.test.ts",
+    "Utils.test.ts",
   ]
 
   deps = [
