--- a/front_end/panels/timeline/fixtures/traces/BUILD.gn
+++ b/front_end/panels/timeline/fixtures/traces/BUILD.gn
@@ -50,6 +50,7 @@ copy_to_gen("traces") {
     "many-requests.json.gz",
     "missing-process-data.json.gz",
     "missing-tracing-start.json.gz",
+    "missing-url.json.gz",
     "multiple-lcp-main-frame.json.gz",
     "multiple-navigations-render-blocking.json.gz",
     "multiple-navigations-same-id.json.gz",
