Switch icon for Settings->AI innovations
Screenshot: https://imgur.com/a/IEEfVTq

Bug: 370709045
Change-Id: Ifd4ed3ea2b3036aac760f9ccffc35780ea615d72
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5904631
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Auto-Submit: Wolfgang Beyer <wolfi@chromium.org>

--- a/config/gni/devtools_image_files.gni
+++ b/config/gni/devtools_image_files.gni
@@ -65,6 +65,7 @@ devtools_svg_sources = [
   "brush.svg",
   "bug.svg",
   "bundle.svg",
+  "button-magic.svg",
   "calendar-today.svg",
   "check-circle.svg",
   "check-double.svg",
