--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -58,6 +58,7 @@ grd_files_release_sources = [
   "front_end/Images/brush.svg",
   "front_end/Images/bug.svg",
   "front_end/Images/bundle.svg",
+  "front_end/Images/button-magic.svg",
   "front_end/Images/calendar-today.svg",
   "front_end/Images/check-circle.svg",
   "front_end/Images/check-double.svg",
