[Freestyler] Add entry point floating button from Elements panel
Fixed: 369335943
Change-Id: I37af7cdca8516aca94e030024c5cb83d29f641db
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5904617
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/front_end/panels/elements/BUILD.gn
+++ b/front_end/panels/elements/BUILD.gn
@@ -88,6 +88,7 @@ devtools_module("elements") {
     "../../panels/utils:bundle",
     "../../ui/components/adorners:bundle",
     "../../ui/components/code_highlighter:bundle",
+    "../../ui/components/floating_button:bundle",
     "../../ui/components/highlighting:bundle",
     "../../ui/components/text_editor:bundle",
     "../../ui/components/tree_outline:bundle",
