--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -677,6 +677,7 @@ grd_files_release_sources = [
   "front_end/ui/components/dialogs/dialogs.js",
   "front_end/ui/components/diff_view/diff_view.js",
   "front_end/ui/components/expandable_list/expandable_list.js",
+  "front_end/ui/components/floating_button/floating_button.js",
   "front_end/ui/components/helpers/helpers.js",
   "front_end/ui/components/highlighting/highlighting.js",
   "front_end/ui/components/icon_button/icon_button.js",
@@ -2140,6 +2141,8 @@ grd_files_debug_sources = [
   "front_end/ui/components/diff_view/diffView.css.js",
   "front_end/ui/components/expandable_list/ExpandableList.js",
   "front_end/ui/components/expandable_list/expandableList.css.js",
+  "front_end/ui/components/floating_button/FloatingButton.js",
+  "front_end/ui/components/floating_button/floatingButton.css.js",
   "front_end/ui/components/helpers/component-server-setup.js",
   "front_end/ui/components/helpers/directives.js",
   "front_end/ui/components/helpers/get-root-node.js",
