Disable stylelint specificity rule
It doesn't work as well with nested rules, and we were beginning to have
to disable it more and more. Chatted with the team and we agreed to
remove this rule.

Bug: none
Change-Id: I756030f97694590c3bb9667968bd49c8aa9e7bb5
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5912715
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -26,6 +26,7 @@
     "selector-no-vendor-prefix": null,
     "property-no-vendor-prefix": null,
     "value-no-vendor-prefix": null,
-    "media-feature-name-no-vendor-prefix": null
+    "media-feature-name-no-vendor-prefix": null,
+    "no-descending-specificity": null
   }
 }
