[DrJones] [FileEntrypoint] Update to Freestyler panel for DrJones File Agent
Bug: 371946843
Change-Id: Ic106311c4b833ae7d146476a26de6b71d708e032
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5912832
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Samiya Caur <samiyac@chromium.org>

--- a/front_end/models/workspace/BUILD.gn
+++ b/front_end/models/workspace/BUILD.gn
@@ -40,6 +40,7 @@ devtools_entrypoint("bundle") {
     "../../panels/elements/*",
     "../../panels/emulation/*",
     "../../panels/explain/*",
+    "../../panels/freestyler/*",
     "../../panels/lighthouse/*",
     "../../panels/network/*",
     "../../panels/profiler/*",
