--- a/front_end/panels/freestyler/BUILD.gn
+++ b/front_end/panels/freestyler/BUILD.gn
@@ -35,6 +35,7 @@ devtools_module("freestyler") {
     "../../core/host:bundle",
     "../../core/i18n:bundle",
     "../../models/logs:bundle",
+    "../../models/workspace:bundle",
     "../../panels/network/forward:bundle",
     "../../panels/utils:bundle",
     "../../third_party/marked:bundle",
