[DrJones] [FileEntrypoint] Add DrJones File Agent
Bug: 372002168
Change-Id: I8a7878a928cf75a77f873145a6ab8f9abc65170d
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5912734
Commit-Queue: Samiya Caur <samiyac@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>

--- a/front_end/panels/freestyler/BUILD.gn
+++ b/front_end/panels/freestyler/BUILD.gn
@@ -20,6 +20,7 @@ devtools_module("freestyler") {
   sources = [
     "AiAgent.ts",
     "ChangeManager.ts",
+    "DrJonesFileAgent.ts",
     "DrJonesNetworkAgent.ts",
     "ExtensionScope.ts",
     "FreestylerAgent.ts",
@@ -74,6 +75,7 @@ ts_library("unittests") {
 
   sources = [
     "ChangeManager.test.ts",
+    "DrJonesFileAgent.test.ts",
     "DrJonesNetworkAgent.test.ts",
     "FreestylerAgent.test.ts",
     "FreestylerEvaluateAction.test.ts",
